[tool.poetry]
name = "samplesheet-validator"
version = "0.1.0"
description = "A validator for Illumina samplesheets"
authors = ["Niklas Mähler <2573608+maehler@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
samplesheet-validator = "samplesheet_validator.commands:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
